--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM).
                     <br>
                    
                      <a href="https://www.behance.net/gallery/106606321/PORTAFOLIO-FULLSTACK-MARKETING" class="recoba-btn2" target="_blank">BEHANCE</a>
-                        <a href="cv/CV RAUL PEÑA.pdf" class="recoba-btn2" target="_blank">DESCARGAR CV</a>
+                        <a href="cv/CV RAUL PEÑA 2020.pdf" class="recoba-btn2" target="_blank">DESCARGAR CV</a>
                                                 <!-- testimonios -->
                                <h3 class="subtitle top30">Testimonios de mi trabajo</h3>
                         <div id="testimonial" class="owl-carousel owl-theme testimonial top40">
