--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VLR7CSRQ34"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VLR7CSRQ34');
+</script>
+  
 <title>Raul Peña - CV Personal</title>
 <meta charset="UTF-8">
 <meta name="keywords" content="business, personal, portfolio">
@@ -484,6 +495,11 @@ Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM).
 
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v8.0" nonce="6H4dH4Xo"></script>
+
+
+
+
+
 
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script><!-- jQuery library -->
