--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <span>Licenciado en Administración</span>
                                 <p>Licenciado en Administración Egresado de la Universidad Autónoma del Estado de Hidalgo. <br><br>
                                 Actualmente estudio una Maestría en Administración con Especialidad en Gestión y Administración de Proyectos en la Universidad La Salle Pachuca (En curso).<br><br>
-Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM).
+Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM). La maestría se hace en linea por temas de pandemia y hay disponibilidad de trabajar mientras estoy en clase.
                                 </p>
                                 
                             </div>
