--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                             <div class="home-box">
                                 <h1>Raul Peña</h1>
                                 <span>Licenciado en Administración</span>
-                                <p>Licenciado en Administración Egresado de la Universidad Autónoma del Estado de Hidalgo. <br><br>
-                                Actualmente estudio una Maestría en Administración con Especialidad en Gestión y Administración de Proyectos en la Universidad La Salle Pachuca (En curso).<br><br>
-Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM). La maestría se hace en linea por temas de pandemia y hay disponibilidad de trabajar mientras estoy en clase.
+                                <p>Licenciado en Administración Egresado de la Universidad Autónoma del Estado de Hidalgo (Titulado).<br><br>
+									Especialidad en Gestión y Administración de Proyectos en la Universidad La Salle Pachuca (Terminada).<br><br>
+                               Maestría en Administración (En curso).  
                                 </p>
                                 
                             </div>
@@ -124,7 +124,7 @@ Horario: Viernes de 5:00 PM a 10:00 PM y Sábado de 8:00 AM a 2:00 PM). La maest
                     <div class="scroll-out">
                     <div class="floor about">
                     	<h2 class="page-title">Sobre mí</h2>
-                        <p class="top15"> Soy una persona proactiva que  busca la mejora personal con fin de poder brindar siempre la mejor calidad en el trabajo que realizo, busco soluciones inteligentes para las empresas con quienes trabajo con el fin de alcanzar sus objetivos. </p>
+                        <p class="top15"> Soy una persona proactiva que  busca la mejora personal con fin de poder brindar siempre la mejor calidad en el trabajo que realizo, busco aprender y aportar ideas y soluciones para las empresas con quienes trabajo con el fin de alcanzar sus objetivos. </p>
                         <ul class="list top15 bottom30">
                         	<li><span>Fecha de Nacimiento :</span> 12 de Noviembre de 1996</li>
                             <li><span>Dirección :</span> Pachuca de Soto Hidalgo</li>
