--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="scroll-out">
                     <div class="floor about">
                     	<h2 class="page-title">Sobre mí</h2>
-                        <p class="top15"> Soy una persona proactiva que  busca la mejora personal con fin de poder brindar siempre la mejor calidad en el trabajo que realizo, busco aprender y aportar ideas y soluciones para las empresas con quienes trabajo con el fin de alcanzar sus objetivos. </p>
+                        <p class="top15"> Me considero una persona proactiva, busco la mejora personal con fin de poder brindar siempre la mejor calidad en el trabajo que realizo, busco aprender y aportar ideas y soluciones para su empresa con el fin de alcanzar los objetivos que me propongan. </p>
                         <ul class="list top15 bottom30">
                         	<li><span>Fecha de Nacimiento :</span> 12 de Noviembre de 1996</li>
                             <li><span>Dirección :</span> Pachuca de Soto Hidalgo</li>
@@ -289,8 +289,8 @@
                         <h3 class="subtitle top30 bottom30"></h3>
                         <ul class="resume-list">
                         	<li>
-                            	<h3>CEO de Fullstack Marketing: Agencia de Marketing y Desarrollo WEB </h3>
-                                <span> 2020 - Presente </span>
+                            	<h3>Fullstack Marketing: Agencia de Marketing y Desarrollo WEB </h3>
+                                <span> 2020 </span>
                                 <p>Empresa comprometida con el Desarrollo de las PyMEs, busco potenciar y Desarrollar sus capacidades a través de mis servicios.</p>
                             </li>
                             <li>
