--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     </script>
 
     <title>Raul Peña - CV Personal</title>
+    <meta property="og:url" content="https://mktfullstack.github.io/vitae/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="¡TRABAJEMOS JUNTOS!" />
+    <meta property="og:description"
+        content="busco aprender y aportar ideas y soluciones para su empresa con el fin de alcanzar los objetivos propuestos." />
+    <meta property="og:image"
+        content="https://image.freepik.com/vector-gratis/equipo-negocios-intercambiando-ideas-discutiendo-proyecto-inicio_74855-6909.jpg" />
     <meta charset="UTF-8">
     <meta name="keywords" content="business, personal, portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
