--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Raul Peña &amp; Administrador</title>
+	<title>Raul Peña | Administrador</title>
 	<meta name="description" content="Cv &amp; Raul">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
